--- a/zepto/常用的方法.md
+++ b/zepto/常用的方法.md
@@ -1,4 +1,38 @@
 ## $.extend
+使用方式：
+1. $.extend(target, [source, [source2, ...]])   ⇒ target
+2. $.extend(true, target, [source, ...])   ⇒ target v1.0+
+功能：通过source对象扩展target对象的属性，source对象属性将覆盖target对象属性。
+
+默认情况下为，复制为浅拷贝（浅复制）。如果第一个参数为true表示深度拷贝（深度复制）。
+
+来看一下源码的具体实现：
+```
+  function extend(target, source, deep) {
+    for (key in source)
+      if (deep && (isPlainObject(source[key]) || isArray(source[key]))) {  //深度拷贝对对象、数组进行了递归
+        if (isPlainObject(source[key]) && !isPlainObject(target[key]))
+          target[key] = {}
+        if (isArray(source[key]) && !isArray(target[key]))
+          target[key] = []
+        extend(target[key], source[key], deep)
+      }
+      else if (source[key] !== undefined) target[key] = source[key]
+  }
+
+  // Copy all but undefined properties from one or more
+  // objects to the `target` object.
+  $.extend = function(target){
+    var deep, args = slice.call(arguments, 1)
+    if (typeof target == 'boolean') {  // 支持第2种使用方式
+      deep = target
+      target = args.shift()
+    }
+    args.forEach(function(arg){ extend(target, arg, deep) })
+    return target
+  }
+```
+
 ## $.each
 ## $.map
 ## addClass、removeClass和toggleClass
