--- a/zepto/常用的方法.md
+++ b/zepto/常用的方法.md
@@ -32,7 +32,24 @@
     return target
   }
 ```
-
+要理解深拷贝和浅拷贝，运行下面一段代码即可理解：
+```
+$(function () {
+        var source = {name:'jhon',address:{home:{a:'1',b:'1234'},company:'2456'},family:['wife','son','father','mother']};
+        var target={};
+        $.extend(target,source);
+        console.log(target.name);
+        console.log(target.address);
+        console.log(target.family);
+        source.name='mike';
+        source.address.company='8989';
+        source.family.push('daugter');
+        console.log(target.name);
+        console.log(target.address);
+        console.log(target.family);
+    })
+```
+因为浅复制只会将对象的各个属性进行依次复制，并不会进行递归复制，而 JavaScript 存储对象都是存地址的，所以浅复制会导致target.address和source.address指向同一块内存地址，从而导致source.address.company变化后，target.address.company也变化了。
 ## $.each
 ## $.map
 ## addClass、removeClass和toggleClass
