--- a/zepto/常用的方法.md
+++ b/zepto/常用的方法.md
@@ -9,6 +9,14 @@
 
 来看一下源码的具体实现：
 ```
+  isArray = Array.isArray ||
+      function(object){ return object instanceof Array }
+  function isWindow(obj)     { return obj != null && obj == obj.window }
+  function isObject(obj)     { return type(obj) == "object" }
+  function isPlainObject(obj) {
+    return isObject(obj) && !isWindow(obj) && Object.getPrototypeOf(obj) == Object.prototype
+  }
+  
   function extend(target, source, deep) {
     for (key in source)
       if (deep && (isPlainObject(source[key]) || isArray(source[key]))) {  //深度拷贝对对象、数组进行了递归
@@ -52,6 +60,35 @@ $(function () {
 ```
 因为浅复制只会将对象的各个属性进行依次复制，并不会进行递归复制，而 JavaScript 存储对象都是存地址的，所以浅复制会导致target.address和source.address指向同一块内存地址，从而导致source.address.company变化后，target.address.company也变化了。
 ## $.each
+使用方式：$.each(collection, function(index, item){ ... })   ⇒ collection
+
+功能：遍历数组元素或以key-value值对方式遍历对象。回调函数返回 false 时停止遍历。
+```
+  function likeArray(obj) {
+    var length = !!obj && 'length' in obj && obj.length,
+      type = $.type(obj)
+
+    return 'function' != type && !isWindow(obj) && (
+      'array' == type || length === 0 ||
+        (typeof length == 'number' && length > 0 && (length - 1) in obj)
+    )
+  }
+  $.each = function(elements, callback){
+    var i, key
+    if (likeArray(elements)) {
+      for (i = 0; i < elements.length; i++)
+        if (callback.call(elements[i], i, elements[i]) === false) return elements
+    } else {
+      for (key in elements)
+        if (callback.call(elements[key], key, elements[key]) === false) return elements
+    }
+
+    return elements
+  }
+```
+知识点：
+1. [javascript 类数组](https://segmentfault.com/a/1190000000415572)
+2. [JavaScript 类数组对象](https://blog.taotao.io/javascript-array-like-object/)
 ## $.map
 ## addClass、removeClass和toggleClass
 ## append
