--- a/zepto/常用的方法.md
+++ b/zepto/常用的方法.md
@@ -89,15 +89,74 @@ $(function () {
 知识点：
 1. [javascript 类数组](https://segmentfault.com/a/1190000000415572)
 2. [JavaScript 类数组对象](https://blog.taotao.io/javascript-array-like-object/)
-## $.map
-## addClass、removeClass和toggleClass
-## append
-## attr和prop
+## after, prepend, before, append 
+## attr，removeAttr
+本质是Element.getAttribute()，Element.setAttribute()和Element.removeAttribute()，通过封装，支持多种使用形式
 ## concat
-## css
+处理了zepto.Z对象（类数组），将其通过slice.call转化为数组。
+## css，show，hide和toggle
+1. [HTMLElement.style](https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/style)
+2. [Window.getComputedStyle()](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/getComputedStyle)
 ## empty
-## height和width
+```
+    empty: function(){
+      return this.each(function(){ this.innerHTML = '' })
+    },
+```
+## height,width和offset
+```
+    offset: function(coordinates){
+      if (coordinates) return this.each(function(index){
+        var $this = $(this),
+            coords = funcArg(this, coordinates, index, $this.offset()),
+            parentOffset = $this.offsetParent().offset(),
+            props = {
+              top:  coords.top  - parentOffset.top,
+              left: coords.left - parentOffset.left
+            }
+
+        if ($this.css('position') == 'static') props['position'] = 'relative'
+        $this.css(props)
+      })
+      if (!this.length) return null
+      if (document.documentElement !== this[0] && !$.contains(document.documentElement, this[0]))
+        return {top: 0, left: 0}
+      var obj = this[0].getBoundingClientRect()
+      return {
+        left: obj.left + window.pageXOffset,
+        top: obj.top + window.pageYOffset,
+        width: Math.round(obj.width),
+        height: Math.round(obj.height)
+      }
+    },
+    
+  // Generate the `width` and `height` functions
+  ;['width', 'height'].forEach(function(dimension){
+    var dimensionProperty =
+      dimension.replace(/./, function(m){ return m[0].toUpperCase() })   //width->Width,height->Height
+
+    $.fn[dimension] = function(value){
+      var offset, el = this[0]
+      if (value === undefined) return isWindow(el) ? el['inner' + dimensionProperty] :
+        isDocument(el) ? el.documentElement['scroll' + dimensionProperty] :
+        (offset = this.offset()) && offset[dimension]
+      else return this.each(function(idx){
+        el = $(this)
+        el.css(dimension, funcArg(this, value, idx, el[dimension]()))
+      })
+    }
+  })
+```
+知识点：
+1. [window.innerWidth](浏览器视口（viewport）宽度（单位：像素），如果存在垂直滚动条则包括它。)：浏览器视口（viewport）宽度（单位：像素），如果存在垂直滚动条则包括它。
+2. [window.innerHeight](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/innerHeight)：浏览器窗口的视口（viewport）高度（以像素为单位），如果存在水平滚动条，则包括它。
+3. [Element.scrollWidth](https://developer.mozilla.org/zh-CN/docs/Web/API/element/scrollWidth):元素的scrollWidth只读属性以px为单位返回元素的内容区域宽度或元素的本身的宽度中更大的那个值。若元素的宽度大于其内容的区域（例如，元素存在滚动条时）, scrollWidth的值要大于clientWidth。
+4. [Element.scrollHeight](https://developer.mozilla.org/zh-CN/docs/Web/API/Element/scrollHeight):Element.scrollHeight 是计量元素内容高度的只读属性，包括overflow样式属性导致的视图中不可见内容。没有垂直滚动条的情况下，scrollHeight值与元素视图填充所有内容所需要的最小值clientHeight相同。包括元素的padding，但不包括元素的margin.
+5. [Element.getBoundingClientRect()](https://developer.mozilla.org/zh-CN/docs/Web/API/Element/getBoundingClientRect):返回元素的大小及其相对于视口的位置。
+4. window.pageXOffset，window.pageYOffset: window.scrollX, window.scrollY 的别名，pageXOffset 和 pageYOffset 属性返回文档在窗口左上角水平和垂直方向滚动的像素。
 ## html、val和text
-## offset
-## reduce
-## show、hide和toggle
+html-通过Element.innerHTML 属性设置或获取描述元素后代的HTML语句
+
+val-通过设置元素的value属性
+
+text-通过Node.textContent 属性设置一个节点及其后代的文本内容。
