--- a/wechatwebdevtools/1_扫码登录.md
+++ b/wechatwebdevtools/1_扫码登录.md
@@ -51,6 +51,7 @@
 ```
 ## 组件d：扫码登录
 - 还原render
+
         ```
         <div className="authenticate-qrcode">
             <img ref={ref=(a)=>this.QRCodeImgElement=a}/>
@@ -98,4 +99,34 @@
         - 出错则重试
         - KEEP_ALIVE，则继续轮询
         - 取消
-  2. 
+  2. 记录日志app_main_login
+        ```
+        // post请求，url地址如下
+        https://servicewechat.com/wxa-dev-logic/clientreport
+        ```
+        
+## 总结
+1. https://servicewechat.com/connect/qrconnect 处理一些逻辑，并重定向redirect_uri
+2. https://mp.weixin.qq.com/debug/cgi-bin/webdebugger/qrcode&scope=snsapi_login&state=login#wechat_redirect 请求中获取到qrcode和长轮询longPollURL
+3. 长轮询的响应是javascript，执行该js获取结果。如果用户扫码成功，则可以获取code，异常则进行异常处理。
+4. 获取code后，请求https://mp.weixin.qq.com/debug/cgi-bin/webdebugger/qrcode?code=${wx_code}&state=${n} 获取openId等信息后，则表示登录成功
+
+# 登录成功后的下一步
+1. dispatch 窗口类型：
+```
+{
+        type: d.WINDOW_SET_MAIN_WINDOW,
+        mainWindow: a   // LOGIN、ENTRANCE、SELECT_PROJECT、CREATE_PROJECT、CREATE_MINICODE、IMPORT_MINICODE、DEV、WEB_DEBUGGER
+}
+```
+2. dispatch登录
+```
+{
+        type: d.USER_LOGIN_SUCCESS,
+        userInfo: a
+}
+```
+3. 窗口顺序：LOGIN -》 ENTRANCE
+```
+this.props.mainWindow === d.MAIN_WINDOW_TYPE.LOGIN && this.props.hasLogin && this.props.setMainWindow(d.MAIN_WINDOW_TYPE.ENTRANCE)
+```
