--- a/wechatwebdevtools/1_扫码登录.md
+++ b/wechatwebdevtools/1_扫码登录.md
@@ -92,7 +92,7 @@
         /"(https:\/\/long.open.weixin.qq.com\/connect\/l\/qrconnect\?uuid=.+?)"/
         ```
      3. 长轮询获取javascript,eval(javascript)获取用户是否扫码以及扫码结果
-        - 成功：发请求(url=https://mp.weixin.qq.com/debug/cgi-bin/webdebugger/qrcode?code=${wx_code}&state=${n}) 获取openId、signature、newticket、nickname等信息，然是通过this.props.onLoginSuccess(b)返回给上层父组件。
+        - 用户在微信中确认登录：发请求(url=https://mp.weixin.qq.com/debug/cgi-bin/webdebugger/qrcode?code=${wx_code}&state=${n}) 获取openId、signature、newticket、nickname等信息，然是通过this.props.onLoginSuccess(b)返回给上层父组件。
         - 已扫码
         - 取消
         - 超时，则重试3次
