--- a/wechatwebdevtools/1_扫码登录.md
+++ b/wechatwebdevtools/1_扫码登录.md
@@ -1,4 +1,5 @@
 # 扫码登录(React.Component)
+![登录界面](https://github.com/cleverpp/SourceAnalytics/blob/master/wechatwebdevtools/assets/LOGIN.png)
 ## 二维码的状态
 ```
         LOGIN_QR_STATUS: {
