--- a/wechatwebdevtools/1_扫码登录.md
+++ b/wechatwebdevtools/1_扫码登录.md
@@ -1,5 +1,7 @@
 # 扫码登录(React.Component)
-![登录界面](https://github.com/cleverpp/SourceAnalytics/blob/master/wechatwebdevtools/assets/LOGIN.png)
+<img src="https://github.com/cleverpp/SourceAnalytics/blob/master/wechatwebdevtools/assets/LOGIN.png" alt="登录界面" width="20%" height="20%">
+
+
 ## 二维码的状态
 ```
         LOGIN_QR_STATUS: {
