--- a/wechatwebdevtools/0-入口组件-1.md
+++ b/wechatwebdevtools/0-入口组件-1.md
@@ -80,8 +80,10 @@ CREATE_MINICODE || IMPORT_MINICODE: require('./c6e781935457a48a3f7675888ab50cfe.
     <项目管理窗口，取决于this.props.showProjectManagement/>
 </div>
 ```
-2. 如果global.isDevWindow=true，则根据devType，可以开发小程序或者其他（例如：小游戏、代码片段等）
+2. 如果global.isDevWindow=true，则根据devType，可以开发小程序或者其他（例如：小游戏、代码片段等）。
+
 开发小程序：require('./2c0e34a9e23574aea227f3448a526c52.js')
+
 开发其他：require('./dadaae924a58746545d3b2199ba0c470.js')
 ```
 <div>
