--- a/wechatwebdevtools/0-入口组件-1.md
+++ b/wechatwebdevtools/0-入口组件-1.md
@@ -67,32 +67,30 @@ I.startSync()
 ```
 ## render
 1. 如果global.isDevWindow=false，则根据窗口类型，渲染对应的窗口组件，默认创建ENTRANCE窗口。
-LOGIN:require('./021e193565a294d7eb2d08daddd97cc4.js')
-ENTRANCE:require('./0deb78a56cbcc9f9f3b0823d28892e90.js')
-SELECT_PROJECT:require('./299addce80fc9f50b337441dcd08bb70.js')
-CREATE_PROJECT:require('./bdbf06bc9f97badd3ab5ba497b62543a.js')
-CREATE_MINICODE || IMPORT_MINICODE: require('./c6e781935457a48a3f7675888ab50cfe.js')
-```
-<div>
-    <主窗口/>
-    <可选窗口，取决于this.props.confirmPopups/>
-    <设置窗口，取决于this.props.showSettings/>
-    <项目管理窗口，取决于this.props.showProjectManagement/>
-</div>
-```
+    - LOGIN:require('./021e193565a294d7eb2d08daddd97cc4.js')
+    - ENTRANCE:require('./0deb78a56cbcc9f9f3b0823d28892e90.js')
+    - SELECT_PROJECT:require('./299addce80fc9f50b337441dcd08bb70.js')
+    - CREATE_PROJECT:require('./bdbf06bc9f97badd3ab5ba497b62543a.js')
+    - CREATE_MINICODE || IMPORT_MINICODE: require('./c6e781935457a48a3f7675888ab50cfe.js')
+    ```
+    <div>
+        <主窗口/>
+        <可选窗口，取决于this.props.confirmPopups/>
+        <设置窗口，取决于this.props.showSettings/>
+        <项目管理窗口，取决于this.props.showProjectManagement/>
+    </div>
+    ```
 2. 如果global.isDevWindow=true，则根据devType，可以开发小程序或者其他（例如：小游戏、代码片段等）。
-
-开发小程序：require('./2c0e34a9e23574aea227f3448a526c52.js')
-
-开发其他：require('./dadaae924a58746545d3b2199ba0c470.js')
-```
-<div>
-    <开发小程序组件/>
-    <可选窗口，取决于this.props.confirmPopups/>
-    <设置窗口，取决于this.props.showSettings/>
-    <项目管理窗口，取决于this.props.showProjectManagement/>
-</div>
-```
+    - 开发小程序：require('./2c0e34a9e23574aea227f3448a526c52.js')
+    - 开发其他：require('./dadaae924a58746545d3b2199ba0c470.js')
+    ```
+    <div>
+        <开发小程序组件/>
+        <可选窗口，取决于this.props.confirmPopups/>
+        <设置窗口，取决于this.props.showSettings/>
+        <项目管理窗口，取决于this.props.showProjectManagement/>
+    </div>
+    ```
 ## componentWillReceiveProps
 1. this.props.mainWindow发生变化时，重新checkWindowStatus。
 2. 如果用户未登录，则设置mainWindow为LOGIN
