--- a/wechatwebdevtools/模拟器.md
+++ b/wechatwebdevtools/模拟器.md
@@ -1,5 +1,89 @@
 # 模拟器
-1. 触发模拟器
-toggleSimulatorWindow
+## 触发模拟器
+1. 点击开发界面的 模拟器button，则出现模拟器区域，可以仿真显示代码编译后的执行效果
+```
+onSetSimulator() {
+    this.props.toolbarConfigShow || (this.props.simulatorPopup ? (this.props.windowActions.toggleSimulatorWindow(),
+    this.props.compile()) : this.props.windowActions.toggleSimulatorWindow())
+}
+```
+2. dispatch了一个action，reducer中修改了store.simulator.show
+```
+{
+    type: d.WINDOW_TOGGLE_SIMULATOR
+}
 
-2. 模拟器组件
+case e.WINDOW_TOGGLE_SIMULATOR:
+    {
+        const a = {};
+        return a.show = !h.simulator.show,
+        'popup' === h.simulator.position && (a.show = !0,
+        a.position = 'left'),
+        _extends({}, h, {
+            simulator: _extends({}, h.simulator, a)
+        })
+    }
+```
+
+## 模拟器组件
+6620a0cf7dad1b400d60f0fdae40f524.js
+
+```
+b.createElement(k, {
+    templateHTML: 'html/standalone.html',
+    wrapperProps: e,
+    title: la.config.SIMULATOR_WINDOW_TITLE.format(decodeURIComponent(c.project.projectname)),
+    frame: !0,
+    show: !1,
+    width: c.deviceWidth,
+    height: c.deviceHeight + 27,
+    resizable: !1,
+    fullscreen: !1,
+    always_on_top: !1,
+    onWindowClose: this.onSimulatorWindowClose.bind(this),
+    onReady: this.onSimulatorWindowReady.bind(this),
+    renderClass: d
+})
+```
+1. 执行onReady: this.onSimulatorWindowReady.bind(this)
+```
+onSimulatorWindowReady() {
+    'popup' === this.props.simulatorPosition && this.props.simulatorActions.compile()
+}
+```
+  - MsgCenter(websocketServer)发送消息 {type:'COMMAND',data: a.origin, command:e}
+  - dispatch了一个action，reducer中赋值了compileCommand：extends({}, e.data, {ts：Date.now()}}
+2. 核心组件实现
+
+584aae91d7c83393222029103ba1ac29.js
+
+c347d628ff50158115a95a6e980c1738.js
+```
+<D> //容器组件，主要是样式
+    <z/> //组件z，header部分，包括机型选择、区域大小、网络等
+    <div className="simulator-shell">
+        <div className="simulator">
+            <H/>  // 模拟器的状态栏
+            <M/>
+            <c/>
+            {this.getWebviewNodes()}
+            <d/>
+            <g/>
+            <j/>
+            <k/>
+            <l/>
+            <m/>
+            {this.getOptionsComponents()}
+            <r/>
+            <Q/>
+            {this.getWindowComponents()}
+        </div>
+    </div>
+    <v/>
+    <I/>
+    <div></div>
+</D>
+```
+
+
+
