--- a/wechatwebdevtools/模拟器.md
+++ b/wechatwebdevtools/模拟器.md
@@ -64,26 +64,29 @@ c347d628ff50158115a95a6e980c1738.js
     <div className="simulator-shell">
         <div className="simulator">
             <H/>  // 模拟器的状态栏
-            <M/>
-            <c/>
-            {this.getWebviewNodes()}
-            <d/>
-            <g/>
-            <j/>
-            <k/>
-            <l/>
-            <m/>
-            {this.getOptionsComponents()}
-            <r/>
-            <Q/>
-            {this.getWindowComponents()}
+            <M/>  // 绝对定位的空白页面
+            <c/>  // js/d8460cd7eec9b5ac3077a1c3fc6a50d2.js 标题栏，包含右侧胶囊控件，其中：baseURL: `http://127.0.0.1:${global.proxyPort}/__pageframe__/`
+            {this.getWebviewNodes()} // 组件e(js/48ed383395967d737f11ebc42820b913.js) 或组件f(js/41c99b908d0cb118c2a6fcf3c306663c.js)
+            <d/>  // TabBar
+            <g/>  // previewImage, 懒加载Image (weui-gallary)
+            <j/>  // Toast，weui-toast
+            <k/>  // ModelDialog, weui-dialog
+            <l/>  // ActionSheet, weui-actionsheet
+            <m/>  // RightBtnActionSheet
+            {this.getOptionsComponents()} // q-SelectorPicker, n-datePicker, o-timePicker, p-multiPicker, h-payment, u-confirm, B-authorize
+            <r/>  // share组件
+            <Q/>  // Debugger组件，断点
+            {this.getWindowComponents()} //s-group,t-setting,E-addCard, F-viewCard, N-h5AddCard, O-h5ViewCard, P-h5ChooseCard, C-location, J-addPhoneContact, K-chooseAddress, L-choseInvoiceTitle
         </div>
     </div>
-    <v/>
-    <I/>
+    <v/>  // 底部组件，显示页面路径、场景值、页面参数
+    <I/>  // 场景列表
     <div></div>
 </D>
 ```
+    - 组件e
+    - 组件f
+3. 模拟器原理
 
 
 
