--- a/wechatwebdevtools/模拟器.md
+++ b/wechatwebdevtools/模拟器.md
@@ -85,9 +85,20 @@ c347d628ff50158115a95a6e980c1738.js
 </D>
 ```
 
-  - 组件e
-  - 组件f
-3. 模拟器原理
+3. 组件e - webview (js/48ed383395967d737f11ebc42820b913.js)
+src:`http://127.0.0.1:${global.proxyPort}/__pageframe__/pageframe.html`
 
+    - js/0c4823143da6a69d89b64580be1021af.js
+    - js/a78e6d6a87de1708226375ca4c320d76.js
+    - js/015fdda1d1aad2fb64ce9f97d3c60553.js
+    - js/0db6515f85d6f6210c2d50722041eb1f.js
+4. 组件f - webview 以及对应的devtools (js/41c99b908d0cb118c2a6fcf3c306663c.js) 
+    - js/c2a80787c66a9374529d46b5572ce35d.js
+    
+## 模拟器原理
+1. 模拟器的实现，分header、simulator-shell、footer、场景列表。
+2. 各个组件的实现
+3. 加载资源并渲染
+4. devtools
 
 
