--- a/wechatwebdevtools/3_开发小程序.md
+++ b/wechatwebdevtools/3_开发小程序.md
@@ -102,11 +102,11 @@
 
 ## main部分
 1. gitpanel  0ba8bbb520f446ec68be8010f175693d.js
-2. 组件r  0ac4da1c7ab84710f2c94e3bf0cf4861.js
+2. 组件r - 自定义编译条件  0ac4da1c7ab84710f2c94e3bf0cf4861.js
 3. 可选组件 this.getOptionsComponents()
 4. 模拟器 this.getSimulator(c)
-5. 组件l efaddce19b790978e16990920754b000.js
-6. this.getService(c)
+5. 组件l - 编辑器 efaddce19b790978e16990920754b000.js
+6. 调试器 - this.getService(c) - b1ba6dfcea5ed09bd8f7edf39a8149d6.js
 7. 组件ma 806427363b293db20edb3e7c3f8d8b72.js
 8. 组件E d326caa17e34aabeda5187fbed6e1e47.js
 9. this.getOptionsWindows()
