--- a/wechatwebdevtools/3_1_模拟器.md
+++ b/wechatwebdevtools/3_1_模拟器.md
@@ -99,6 +99,6 @@ src:`http://127.0.0.1:${global.proxyPort}/__pageframe__/pageframe.html`
 1. 模拟器的实现，分header、simulator-shell、footer、场景列表。
 2. 各个组件的实现
 3. 加载资源并渲染
-4. devtools
+4. 与devtools之间的交互
 
 
