--- a/wechatwebdevtools/3_开发小程序.md
+++ b/wechatwebdevtools/3_开发小程序.md
@@ -4,6 +4,8 @@
 该组件功能大部分与 0-入口组件-2.md 相同，不再重复分析componentDidMount和render，这里对主要功能和模块进行分析
 
 ## header部分
+925e13dda17a5a2e1cbaf0212c56c31c.js
+
 1. 头像部分
 2. 编译类型选择
 3. 开发环境，支持nodejs、php
@@ -106,7 +108,7 @@
 3. 可选组件 this.getOptionsComponents()
 4. 模拟器 this.getSimulator(c) - 6620a0cf7dad1b400d60f0fdae40f524.js
 5. 组件l - 编辑器 efaddce19b790978e16990920754b000.js
-6. 调试器 - this.getService(c) - b1ba6dfcea5ed09bd8f7edf39a8149d6.js
+6. 调试器 - this.getService(c)
 7. 组件ma 806427363b293db20edb3e7c3f8d8b72.js
 8. 组件E d326caa17e34aabeda5187fbed6e1e47.js
 9. this.getOptionsWindows()
