--- a/wechatwebdevtools/3_2_真机调试.md
+++ b/wechatwebdevtools/3_2_真机调试.md
@@ -44,7 +44,31 @@ async remoteDebug(a) {
     - js/629ccf62fc18c4d6caab59c1e6619a09.js
     详细见 扫描二维码预览或真机调试 章节
 
-2. this.props.windowActions.setRemoteDebugWindow 
+2. this.props.windowActions.setRemoteDebugWindow
+    - js/a8c87029da0fa06e986298d447ab0fe2.js
+    ```
+    setRemoteDebugWindow: (a)=>async(b,c)=>{
+        if (a.show) {
+            const a = c();
+            if (a.window.remoteDebugWindow.show)
+                try {
+                    const a = await g.onWindowRegistered(e.WINDOW_REGISTRY.REMOTE_DEBUG_WINDOW);
+                    return void a.window.focus()
+                } catch (a) {}
+         }
+        b({
+            type: d.WINDOW_SET_REMOTE_DEBUG_WINDOW,
+            data: a
+        })
+    }
+    ```
+    - js/cec6fa445b36e82b831c3020815b08b9.js
+    ```
+    case e.WINDOW_SET_REMOTE_DEBUG_WINDOW:
+        return _extends({}, h, {
+            remoteDebugWindow: _extends({}, h.remoteDebugWindow, i.data)
+        }); 
+    ```
 
 ## 扫描二维码预览或真机调试
 629ccf62fc18c4d6caab59c1e6619a09.js
@@ -91,8 +115,51 @@ async remoteDebug(a) {
 
 ### 上传代码
 f0466135fc8b3a662084784e5f4ac792.js
-
+1. 获取项目相关信息
+2. 编译代码  js/911222a6723da8db7ca8a8e3689591e1.js
+    ```
+    const u = await l(i,{noCompile:!0,onProgressUpdate:q,onFilesIgnored:b.onFilesIgnored});
+    ```
+3. 打包 js/e5fa35c3c8e81bc6466b4b8eb436113b.js
+    文件存放在(~/Library/Application Support/微信web开发者工具/Weappdest/${+new Date}.wx) 
+4. 上传 
+    - 此处会控制文件大小
+    - 上传请求路径：https://servicewechat.com/wxa-dev/commitsource?user-version=${c}&user-desc=${a}&uuid=${d}&gzip=1
+    ```
+    {
+        url: `${S}&devplugin=${i.compileType == x.plugin ? 1 : 0}`,
+        method: 'post',
+        body: U,  //打包后的文件
+        needToken: 1,
+        needAppID: 1
+    }      
+    ```
+    - 得到请求响应，获得wxpkg_info、room_id、qrcode_img、username等信息
 ### 初始化调试环境
 63f52c9055d92f52ca0510da7d3dcadb.js
+1. 初始化调试环境
+    - RemoteDir = ~/Library/Application Support/微信web开发者工具/WeappRemote/
+    - RemoteTempDir = ~/Library/Application Support/微信web开发者工具/WeappRemote/temp/
+    - RemoteDataDir = ~/Library/Application Support/微信web开发者工具/WeappRemote/data/
+    - 有RemoteDir、RemoteTempDir 等目录则清除，然后重新创建RemoteDir、RemoteTempDir、RemoteDataDir 目录。
+2. 准备文件
+    - 读取项目目录下的app.json文件
+    - 缓存以项目根路径作为参数的FileUtils对象，并监听all事件(即watch所有的文件)
+    - 遍历除app.json外的所有json文件，获取ext.json相关的扩展component。（?)
+    - 准备所有的components、Page、js文件、wxappcode.js、wxmlxcjs.js、w.getServiceCode、wxplugincode.js、wacloud.js
+3. RemoteDebug js/6c6f4dde020ed24929c4c4367c42d34d.js
+    ```
+    B = new n({  // n=RemoteDebug
+        files: j,  //所有处理好的文件
+        dir: u,    // RemoteDir
+        tempDir: v, // RemoteTempDir
+        dataDir: w,  // RemoteDataDir
+        initialRoomInfo: _extends({}, g),
+        config: _extends({}, m),
+        mode: m.remoteDebugLocal ? m.remoteDebugLocal : 'server',
+        clientProxyPort: m.clientProxyPort,
+        cdpEnabled: !!m.isGame
+    });
+    ```
 
 
