--- a/wechatwebdevtools/3_2_真机调试.md
+++ b/wechatwebdevtools/3_2_真机调试.md
@@ -147,7 +147,7 @@ f0466135fc8b3a662084784e5f4ac792.js
     - 缓存以项目根路径作为参数的FileUtils对象，并监听all事件(即watch所有的文件)
     - 遍历除app.json外的所有json文件，获取ext.json相关的扩展component。（?)
     - 准备所有的components、Page、js文件、wxappcode.js、wxmlxcjs.js、w.getServiceCode、wxplugincode.js、wacloud.js
-3. RemoteDebug js/6c6f4dde020ed24929c4c4367c42d34d.js
+3. 初始化调试实例RemoteDebug js/6c6f4dde020ed24929c4c4367c42d34d.js
     ```
     B = new n({  // n=RemoteDebug
         files: j,  //所有处理好的文件
@@ -160,6 +160,95 @@ f0466135fc8b3a662084784e5f4ac792.js
         clientProxyPort: m.clientProxyPort,
         cdpEnabled: !!m.isGame
     });
+    
+    s('remotedebug', z.config.INITIALIZE_DEBUG_INSTANCE),  // 初始化调试实例
+    await B.init(),
+    s('remotedebug', z.config.WAITING_FOR_PROCESS)  // 等待进程
     ```
+### 调试实例RemoteDebug
+6c6f4dde020ed24929c4c4367c42d34d.js
+1. 初始化init
+    - 模式mode：server模式、remoteDebugLocal(andorid、ios)模式。如果是android的本地模式，则也是使用adbkit，获取设备信息并获取用户的授权。
+    - 新建DebugServer js/ce02bd5f4368747c4e2fff84ed0fc0de.js
+        ```
+        this.debugServer = new h.DebugServer({
+                port: d,
+                mode: this.mode,
+                androidDeviceId: a,
+                clientProxyPort: this.clientProxyPort
+        }),
+        ```
+     - 新建Messager js/02a96d04e49a39ea9d70e3d9d372379a.js
+        ```
+        this.messager = "server" === this.mode ? new b.Messager({
+            tempDir: this.tempDir,
+            initialRoomInfo: this.initialRoomInfo
+        }) : new c.LocalMessager({
+            roomInfo: this.initialRoomInfo,
+            debugServerPort: d,
+            debugServer: this.debugServer
+        }),
+        ```
+      - DebugServer 及 Messager 的初始化、事件监听
+        ```
+        this.debugServer.on("cpmessage", this.onCpWsMessage.bind(this)),
+        this.messager.on("statuschange", this.onMessagerStatusChange.bind(this)),
+        this.messager.on("debugmessage", this.onDebugMessage.bind(this)),
+        this.messager.onAskForRetry(this._askForRetryFn),
+        this.messager.on("accident", this.onMessagerAccident.bind(this)),
+        this.messager.on("event", this.onMessagerEvent.bind(this)),
+        this.messager.on("datasendreport", this.onMessagerDataSendReport.bind(this));
+        try {
+            await this.messager.init(),
+            await this.debugServer.init()
+        } catch (a) {
+            throw z.e(a),
+            a
+        }
+        ```
+      - 创建子进程执行remote-helper.js，其中参数有：
+        ```
+        const g = {
+                wsurl: `ws://127.0.0.1:${d}`,
+                httpPort: (global.proxyPort || 9973) + "",
+                initialInspectPort: (await E(!0)) + "",
+                dir: this.dir,
+                tempDir: this.tempDir,
+                dataDir: this.dataDir,
+                usingLocalStorage: this.usingLocalStorage ? "yes" : "no",
+                isDev: f.isDev ? "yes" : "no",
+                files: JSON.stringify(this.files),
+                vendorDir: y
+            }
+              , j = this.cp = o.fork(x, [], {  // x = remote-helper.js  o=require("node-sync-ipc").parent()
+                execPath: w,   //w = node的路径
+                env: g
+            });
+        ```
+      - 子进程remote-helper.js监听的事件
+        ```
+            j.on("message", this.onCpMessage.bind(this)),
+            j.onSync("sdksyncapi", this.onCpSyncMessage.bind(this)),
+            j.onSync("sdkstorageapi", this.onCpStorageMessage.bind(this)),
+            this.messager.on("destroy", this.onMessagerDestroy.bind(this)),
+            j.on("disconnect", e),
+            j.on("close", e),
+            j.on("exit", (a)=>{
+                z.w("cp exited with code " + a),
+                e("child process exit " + a)
+            }
+            ),
+            j.on("error", (a)=>{
+                z.e("cp encountered error", a && a.toString()),
+                e(a && a.toString())
+            }
+        ```
+2. 子进程remote-helper.js
+    - inspector.open(initialInspectPort) : 激活inspector
+    - initWs，初始化Websocket客户端
 
 
+# 涉及到的第三方库及需要进一步了解的内容
+1. node-sync-ipc
+2. Reflect.decorate（typescript）
+3. nodejs的vm模块、inspector模块
