--- a/wechatwebdevtools/3_2_真机调试.md
+++ b/wechatwebdevtools/3_2_真机调试.md
@@ -112,6 +112,12 @@ async remoteDebug(a) {
     ```
   - onProgressUpdate  更新进度信息设置 this.state.progressDetailedText 和 this.state.stage
   - onEvent 设置 this.state.remoteDebugEvents
+5. remoteDebugWindow窗口弹出并加载url： 启动了一个调试node的chrome devTools
+    - DebugServer，启动websocket Server （cp）
+    - remote-helper，建立websocket Client （cp），使用nodejs的inpsector.url()获取url
+    - DebugServer监听客户端的vmReady消息，获取url，然后发送initSuccess消息
+    - RemoteDebug 监听initSuccess，触发真机调试窗口打开。
+6. 
 
 ### 上传代码
 f0466135fc8b3a662084784e5f4ac792.js
@@ -135,6 +141,7 @@ f0466135fc8b3a662084784e5f4ac792.js
     }      
     ```
     - 得到请求响应，获得wxpkg_info、room_id、qrcode_img、username等信息
+    
 ### 初始化调试环境
 63f52c9055d92f52ca0510da7d3dcadb.js
 1. 初始化调试环境
@@ -165,6 +172,8 @@ f0466135fc8b3a662084784e5f4ac792.js
     await B.init(),
     s('remotedebug', z.config.WAITING_FOR_PROCESS)  // 等待进程
     ```
+    - 监听initsuccess：打开了remoteDebug窗口，窗口地址为：`chrome-devtools://devtools/bundled/inspector.html?experiments=true&ws=${inspectUrl.replace(/^ws\:\/\//i, "")}`
+    
 ### 调试实例RemoteDebug
 6c6f4dde020ed24929c4c4367c42d34d.js
 1. 初始化init
@@ -243,10 +252,67 @@ f0466135fc8b3a662084784e5f4ac792.js
                 e(a && a.toString())
             }
         ```
-2. 子进程remote-helper.js
+2. DebugServer, websocketServer。
+    - 创建ws server
+        ```
+        const a = this.wss = new f.Server({  // f = require('ws')
+                perMessageDeflate: !1,
+                port: this.port
+            });
+        ```
+    - 监听connection，赋值this.client。处理client端的消息onClientWsMessage，区分是否cp，如果是cp，则赋值this.cpws消息处理为onCpWsMessage。
+    - onCpMessage，本身作为EventEmitter，this.emit("cpmessage", a)。 即将cp客户端发送的消息转发给监听事件cpmessage的函数处理。
+    - this.debugServer.on("cpmessage", this.onCpWsMessage.bind(this)), 处理的第一个类型为type=‘vmReady’
+        ```
+        setTimeout(()=>this.emit("initsuccess", {
+            url: `chrome-devtools://devtools/bundled/inspector.html?experiments=true&ws=${inspectUrl.replace(/^ws\:\/\//i, "")}`
+         }), 0),
+         // q = p.get("storage_remotedebug")  // WebSocketServer,其中命名空间为PLUGIN_storage_remotedebug
+         q.register(this._onRemoteDebugMessage = this.onRemoteDebugMessage.bind(this)),
+         // r = p.get("wxml_remotedebug")  //WebSocketServer,其中命名空间为PLUGIN_wxml_remotedebug
+         r.register(this._onWxmlRemoteDebugMessage = this.onWxmlRemoteDebugMessage.bind(this)),
+         // s = p.get("appdata_remotedebug")  //WebSocketServer,其中命名空间为PLUGIN_appdata_remotedebug
+         s.register(this._onAppDataRemoteDebugMessage = this.onAppDataRemoteDebugMessage.bind(this)),
+         // WebSocketServer,命名空间为REMOTEDEBUGDEVTOOLS
+         t.register(this._onRemoteDebugDevtoolsMessage = this.onRemoteDebugDevtoolsMessage.bind(this)),
+        ```
+    - 如果是ios插线调试：则使用ios-remote-debug-proxy/WARemoteDebugProxy
+        ```
+        l = j.join(process.execPath, "../../../../../Resources/bin/ios-remote-debug-proxy/WARemoteDebugProxy")
+        const a = this.cp = h.spawn(l, [`--wsurl=ws://localhost:${this.port}`, `--usbport=${this.clientProxyPort}`]);
+        ```
+    - 如果是android插线调试：则使用adb-kit
+        ```
+        async initAdb() {
+            const a = await n.version();  // n为adb-kit的封装
+            s.i("adb version running", a);
+            const b = this.androidDeviceId
+            , c = this.clientProxyPort
+            , d = this.port;
+            await n.reverse(b,`tcp:${c}`,`tcp:${d}`)  // 把PC上的clientProxyPort 映射到 安卓手机上的this.port
+        }
+        ```
+3. Messager， websocket Client
+    - 创建ws 客户端
+        ```
+        const a = this.ws = new f(h.RemoteUrl); // f= require("ws"); h.RemoteUrl= wss://wxagame.weixin.qq.com/remote/
+        ```
+        
+4. 子进程remote-helper.js, websocket clinet
     - inspector.open(initialInspectPort) : 激活inspector
-    - initWs，初始化Websocket客户端
-
+    - initWs，初始化Websocket客户端，连接上websocket Server后，notifyMaster
+        ```
+        function notifyMaster() {
+            sendMessageToMaster({
+                type: 'vmReady',
+                data: {
+                    inspectUrl: inspector.url(),
+                },
+            });
+        }
+        ```
+     - 监听服务端的消息：handleSetupContext、handleEvaluateJavascript、handleCallInterfaceResult、debugEnable、getWXAppDatas、setWXAppDatas、exchange等。
+     - 根据Chrome DevTools的原理，那么node inspector会作为Chrome DevTools工具的ws的服务端---》回到入口文件中的WebSocketServer。
 
 # 涉及到的第三方库及需要进一步了解的内容
 1. node-sync-ipc
