--- a/wechatwebdevtools/3_2_真机调试.md
+++ b/wechatwebdevtools/3_2_真机调试.md
@@ -112,12 +112,12 @@ async remoteDebug(a) {
     ```
   - onProgressUpdate  更新进度信息设置 this.state.progressDetailedText 和 this.state.stage
   - onEvent 设置 this.state.remoteDebugEvents
-5. remoteDebugWindow窗口弹出并加载url： 启动了一个调试node的chrome devTools
+5. 获取remoteDebugWindow窗口需加载的url（node inspector）
     - DebugServer，启动websocket Server （cp）
     - remote-helper，建立websocket Client （cp），使用nodejs的inpsector.url()获取url
     - DebugServer监听客户端的vmReady消息，获取url，然后发送initSuccess消息
-    - RemoteDebug 监听initSuccess，触发真机调试窗口打开。
-6. 
+    - RemoteDebug 监听initSuccess，获取真机调试窗口的url
+6. RemoteDebug中的Messager负责监听远程服务端(RemoteUrl= wss://wxagame.weixin.qq.com/remote/)的消息，根据响应回调onStatusUpdate从而更新this.state.remoteDebugStatus。如果正常的话，则二维码窗口消失，真机调试窗口出现。
 
 ### 上传代码
 f0466135fc8b3a662084784e5f4ac792.js
@@ -172,7 +172,8 @@ f0466135fc8b3a662084784e5f4ac792.js
     await B.init(),
     s('remotedebug', z.config.WAITING_FOR_PROCESS)  // 等待进程
     ```
-    - 监听initsuccess：打开了remoteDebug窗口，窗口地址为：`chrome-devtools://devtools/bundled/inspector.html?experiments=true&ws=${inspectUrl.replace(/^ws\:\/\//i, "")}`
+    - 监听initsuccess：获得了remoteDebug窗口地址为：`chrome-devtools://devtools/bundled/inspector.html?experiments=true&ws=${inspectUrl.replace(/^ws\:\/\//i, "")}`
+    - 监听statuschange：根据响应回调 onStatusUpdate
     
 ### 调试实例RemoteDebug
 6c6f4dde020ed24929c4c4367c42d34d.js
@@ -297,6 +298,26 @@ f0466135fc8b3a662084784e5f4ac792.js
         ```
         const a = this.ws = new f(h.RemoteUrl); // f= require("ws"); h.RemoteUrl= wss://wxagame.weixin.qq.com/remote/
         ```
+    - 监听服务端的消息，解码报文并处理相对应的消息
+        通过protobufjs解码获得{data，cmd，uuid}，其中cmd有:Heartbeat、Login、EventNotifyEnd、EventNotifyBlock、EventNotifyBegin、JoinRoom、MessageNotifyParallelly、MessageNotify、QuitRoom、SendDebugMessageParallelly、SendDebugMessage、SyncMessage。 
+        
+        在收到的MessageNotify中类型为DebugMessageCategory中的Breakpoint、CallInterface、CallInterfaceResult、EvaluateJavascript、EvaluateJavascriptResult、Ping、Pong、SetupContext、DomOp、DomEvent、NetworkDebugAPI、ChromeDevtools、ChromeDevtoolsResult、AddJsContext、RemoveJsContext、ConnectJsContext
+        
+    - setStatusByResponse：根据响应获取状态。并发送statuschange事件,一路传递到RemoteDebug实例中，
+        ```
+        this.emit("statuschange", a, b)  // Messager
+        this.messager.on("statuschange", this.onMessagerStatusChange.bind(this)), // RemoteDebug中实例化Message
+        B.on('statuschange', () => {   // B是RemoteDebug的实例，k为onStatusUpdate
+            A || (A = setTimeout(() => {
+                    A = void 0;
+                    for (const a of C)
+                        a();
+                    const a = B && B.messager && B.messager.status;
+                    k(a, 4 < a)
+            }, 400))
+        })
+        ```
+    - 
         
 4. 子进程remote-helper.js, websocket clinet
     - inspector.open(initialInspectPort) : 激活inspector
@@ -312,7 +333,43 @@ f0466135fc8b3a662084784e5f4ac792.js
         }
         ```
      - 监听服务端的消息：handleSetupContext、handleEvaluateJavascript、handleCallInterfaceResult、debugEnable、getWXAppDatas、setWXAppDatas、exchange等。
-     - 根据Chrome DevTools的原理，那么node inspector会作为Chrome DevTools工具的ws的服务端---》回到入口文件中的WebSocketServer。
+     - 根据Chrome DevTools的原理，那么node inspector会作为Chrome DevTools工具的ws的服务端
+
+## 远程调试窗口（React.Component)
+5fce949eb42d709c19a90da9440a955b.js
+1. render
+    ```
+    render() {
+            return b.createElement(e, { 
+                title: h.config.TOOLBAR_REMOTE_DEBUG,
+                width: 1024,
+                height: 800,
+                min_width: 600,
+                min_height: 600,
+                resizable: !0,
+                registryId: 'REMOTE_DEBUG_WINDOW',
+                onWindowClose: this.props.closeRemoteDebugWindow,
+                templateHTML: 'html/popup-debugger.html',
+                renderClass: j
+            })
+    }
+    ```
+2. 组件j，远程调试窗口的渲染 js/c9088b8c1e58e44a737f97a08c5a116e.js
+    - 订阅状态变化subscribeChange
+    - 订阅事件subscribeEvent
+    - 监听相关事件：onAskForRetry、onOpenEditorFile
+    - onStatusChange
+    - 创建左侧调试窗口webview，设置UserAgent和url
+        ```
+        j.showDevTools(!0, c);
+        const a = this.props.project.compileType
+        , b = i.getSessionToken(e.UA_TOKEN)
+        , d = this._oldUa || c.getUserAgent()
+        , f = `${d} remotedebugdevtools ${this.props.remote.usingLocalStorage ? 'usinglocalstorage' : ''} port/${global.messageCenterPort} proxy/${global.proxyPort} token/${b} compileType/${a}`;
+        c.setUserAgentOverride(f),
+        c.src = `${this.props.remote.inspectUrl}`,
+        ```
+     - 监听dialog事件，处理messageText的类型：debugger:paused、debugger:resumed、opennewtab:、opennewtab: 
 
 # 涉及到的第三方库及需要进一步了解的内容
 1. node-sync-ipc
