--- a/wechatwebdevtools/3_2_真机调试.md
+++ b/wechatwebdevtools/3_2_真机调试.md
@@ -317,7 +317,6 @@ f0466135fc8b3a662084784e5f4ac792.js
             }, 400))
         })
         ```
-    - 
         
 4. 子进程remote-helper.js, websocket clinet
     - inspector.open(initialInspectPort) : 激活inspector
@@ -361,7 +360,7 @@ f0466135fc8b3a662084784e5f4ac792.js
     - onStatusChange
     - 创建左侧调试窗口webview，设置UserAgent和url
         ```
-        j.showDevTools(!0, c);
+        j.showDevTools(!0, c); // c=webview,作为devTools的容器
         const a = this.props.project.compileType
         , b = i.getSessionToken(e.UA_TOKEN)
         , d = this._oldUa || c.getUserAgent()
@@ -370,6 +369,27 @@ f0466135fc8b3a662084784e5f4ac792.js
         c.src = `${this.props.remote.inspectUrl}`,
         ```
      - 监听dialog事件，处理messageText的类型：debugger:paused、debugger:resumed、opennewtab:、opennewtab: 
+3. (chrome <webview> Tag)[https://developer.chrome.com/apps/tags/webview]
+
+## 通信流程
+存在的通信对象：
+1. WebSocketServer（端口为：global.messageCenterPort)。
+2. 远程服务端RemoteUrl(wss://wxagame.weixin.qq.com/remote/) 和 Messager（ws client)
+3. DebugServer(ws server) 和 remote-helper.js(ws client)
+4. RemoteDebug实例、DebugServer实例、Messager实例 都是EventEmmiter对象。
+
+通信流程-vmReady：
+1. remote-helper.js 启用node inspector并获取inspectorUrl后 发送vmReady消息到DebugServer。
+2. DebugServer接受到消息后拼接完整的url后发送initsuccess消息
+3. RemoteDebug实例接受到initsuccess消息后输出：console.log('subscribed remote window shown'）
+
+通信流程-statuschange，真机调试窗口显示
+1. 用户扫码成功后，远程服务端RemoteUrl发送消息给 Messager ： MessageNotify类型
+2. Messager接受到消息后，对消息进行解码，并根据消息类型设置状态：setStatus(q.ActiveIdle)，发送statuschange事件
+3. RemoteDebug实例接收到statuschange消息后，调用onStatusUpate，在该函数中调用this.props.windowActions.setRemoteDebugWindow触发真机调试窗口显示。
+
+远程调试-自定义面板AppData
+1. idepluginManager = require('./f5a748840b272d2bf0223c95f6c8dbe3.js')
 
 # 涉及到的第三方库及需要进一步了解的内容
 1. node-sync-ipc
